# river-raid-rl

./: .gitattributes  .gitignore  .ruff.toml  ABLATION.md  CITATION.cff  CONTRIBUTING.md  README.md  RIVERRAID_RL_REPORT.md  mkdocs.yml  pyproject.toml  requirements.txt  train_cpu.py  train_human_level.py  train_improved.py  train_optimized.py
.github/workflows/: tests.yml
checkpoints/rainbow-200k/: progress.json
checkpoints/rainbow-opt-1780035862/: summary.json
checkpoints/test-progress/: progress.json
configs/: rainbow.yaml
docs/: PLAN_HUMAN_LEVEL.md  index.md
experiments/: evaluate.py  train.py  train_riverraid.py
notebooks/: quickstart.ipynb
results/: ablation_table.py  plot_training.py
riverraid_rl/: __init__.py  __main__.py  config.py  curriculum.py  env.py  env_hierarchical.py  pbt.py  run_demo.py  train.py
riverraid_rl/agents/: base.py  better_than_human.py  dqn.py  hierarchical.py  icm_rainbow.py  rainbow.py  random_agent.py  rule_based.py
riverraid_rl/memory/: replay.py
riverraid_rl/models/: attention.py  cnn.py  icm.py  noisy.py
riverraid_rl/scripts/: eval_all.py  final_results.py  speed_test.py  train_demo.py  train_demo2.py
riverraid_rl/utils/: evaluation.py  logger.py  progress.py
scripts/: _eval_baselines.py  benchmark_speed.py  eval_checkpoints.py  eval_dqn50k.py  instantiate_agents.py  render_gameplay.py  report_existing.py
tests/: test_agents_instantiate.py  test_better_than_human_agent.py  test_config.py  test_instantiate_exported.py  test_rainbow_low_compute.py
